find ticket by user id
